@@ -21,7 +21,6 @@ import java.io.Closeable;
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
@@ -187,7 +186,7 @@ public class CollectionsRepairEventListener
                       Assign.AssignRequest assignRequest =
                           new Assign.AssignRequestBuilder()
                               .forCollection(coll.getName())
-                              .forShard(Collections.singletonList(shard))
+                              .forShard(List.of(shard))
                               .assignReplicas(types)
                               .build();
                       try {
